--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -22,4 +22,14 @@ tauri = { version = "2", features = [] }
 tauri-plugin-opener = "2"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+tokio = "1.49.0"
+reqwest = "0.13.1"
+governor = "0.10.4"
+specta = "=2.0.0-rc.22"
+tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }
+specta-typescript = "0.0.9"
+tempfile = "3.24.0"
+rkyv = "0.8.14"
+tauri-plugin-log = "2.8.0"
+log = "0.4.29"
+thiserror = "2.0.18"
